add Boolean operations for contains